Use URI not URL.
URL is bad bad bad.